resolve the alignment error

--- a/styels.html/portfolio.css
+++ b/styels.html/portfolio.css
@@ -146,6 +146,9 @@ main section{
     font-size: 30px;
     font-weight: 700;
 }
+.resume-container{
+    display: flex;
+}
 
 
 
